export enum TrackType {
	Video = 'Video',
	Audio = 'Audio',
	Subtitle = 'Subtitle',
	Unknown = 'Unknown'
}

export enum AssetType {
	Audio = 'audio',
	Video = 'video',
	Image = 'image',
	Unknown = 'unknown'
}

export enum ProjectEditorTabs {
	VideoEditor = 'Video editor',
	SubtitlesEditor = 'Subtitles editor',
	Translations = 'Translations',
	Style = 'Style',
	Export = 'Export'
}
